src/index.css
@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Outfit:wght@100..900&display=swap");
body {
  background-color: hsl(180, 52%, 96%);
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
.main-section {
  width: 100%;
  height: auto;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  position: relative;
}
.header {
  width: 100%;
  height: 9.75rem;
  background-image: url(./images/bg-header-desktop.svg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  background-color: hsl(180, 29%, 50%);
  position: relative;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: end;
}
.filter-section {
  position: absolute;
  width: 70%;
  height: 44px;
  background-color: #fff;
  border-radius: 0.5rem;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 3rem 1rem 3rem;
  margin-top: 7.5rem;
  z-index: 1;
  box-shadow: 0px 8px 8px 0px hsla(180, 15%, 43%, 0.245);
}
.added-tags {
  width: auto;
  height: auto;
  display: flex;
  flex-direction: row;
  justify-content: start;
  align-items: center;
  column-gap: 1rem;
}
.filtertag {
  width: fit-content;
  height: auto;
  display: flex;
  flex-direction: row;
  justify-content: start;
  align-items: center;
}
.remove-btn {
  width: fit-content;
  max-height: 35.2px;
  padding: 0.5rem 0.75rem 0.5rem 0.75rem;
  background-color: hsl(180, 29%, 50%);
  color: hsl(180, 31%, 95%);
  border: none;
  border-top-right-radius: 0.25rem;
  border-bottom-right-radius: 0.25rem;
  font-size: 1.25rem;
  font-weight: 700;
  cursor: pointer;
}
.remove-btn:hover {
  background-color: hsl(180, 14%, 20%);
}
.clear-btn {
  border: none;
  font-size: 15px;
  color: hsl(180, 29%, 50%);
  text-decoration: underline;
  font-family: "Outfit", serif;
  font-weight: 700;
  cursor: pointer;
}
.roles-container {
  width: 100%;
  height: auto;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  row-gap: 2rem;
  padding: 4rem 0 4rem 0;
}
.role-card {
  width: 70%;
  height: auto;
  padding: 2rem 3rem 2rem 3rem;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  background-color: #fff;
  box-shadow: 0px 8px 8px 0px hsla(180, 15%, 43%, 0.245);
  border-radius: 8px;
}
.first-part {
  display: flex;
  width: auto;
  height: auto;
  flex-direction: row;
  column-gap: 1rem;
  justify-content: start;
  align-items: center;
}
.role-details {
  display: flex;
  width: auto;
  height: auto;
  flex-direction: column;
  justify-content: start;
  align-items: start;
  row-gap: 1rem;
}
.role-headings {
  display: flex;
  width: auto;
  height: auto;
  flex-direction: row;
  justify-content: start;
  align-items: center;
  column-gap: 1rem;
  font-size: 15px;
  color: hsl(180, 29%, 50%);
  font-weight: 700;
  font-family: "Outfit", serif;
}
.labels-container {
  display: flex;
  width: auto;
  height: auto;
  flex-direction: row;
  justify-content: start;
  align-items: center;
  column-gap: 0.5rem;
}
.new-label {
  width: fit-content;
  height: auto;
  padding: 0.25rem 0.5rem 0.25rem 0.5rem;
  background-color: hsl(180, 29%, 50%);
  border-radius: 1rem;
  color: hsl(180, 85%, 95%);
  font-weight: 700;
  font-family: "Outfit", serif;
  font-size: 15px;
  align-items: center;
}
.featured-label {
  width: fit-content;
  height: auto;
  padding: 0.25rem 0.5rem 0.25rem 0.5rem;
  background-color: hsl(180, 14%, 20%);
  border-radius: 1rem;
  color: hsl(180, 31%, 95%);
  font-weight: 700;
  font-family: "Outfit", serif;
  font-size: 15px;
  align-items: center;
}
.position-title {
  display: flex;
  width: auto;
  height: auto;
  flex-direction: row;
  justify-content: start;
  align-items: center;
  column-gap: 1rem;
  font-size: 15px;
  color: hsl(180, 14%, 20%);
  font-weight: 700;
  font-family: "Outfit", serif;
}
.more-details {
  display: flex;
  width: auto;
  height: auto;
  flex-direction: row;
  column-gap: 1rem;
  color: hsl(180, 8%, 52%);
  font-size: 15px;
  font-family: "Outfit", serif;
  font-weight: 500;
  align-items: center;
}
.tags {
  display: flex;
  height: auto;
  width: auto;
  flex-direction: row;
  justify-content: start;
  align-items: center;
  column-gap: 1rem;
}

.tag {
  width: fit-content;
  height: auto;
  color: hsl(180, 29%, 50%);
  background-color: hsl(180, 85%, 95%);
  padding: 0.5rem 0.75rem 0.5rem 0.75rem;
  border-radius: 0.25rem;
  font-size: 15px;
  font-weight: 700;
  font-family: "Outfit", serif;
  cursor: pointer;
  border: none;
}
.tag:hover {
  background-color: hsl(180, 29%, 50%);
  color: hsl(180, 85%, 95%);
}

@media (max-width: 450px) {
  .header {
    width: 100%;
    height: 9.375rem;
    background-position: end;
    background-color: hsl(180, 29%, 50%);
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: end;
  }
  .role-card {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: start;
    width: 75%;
    padding: 3rem 1rem 3rem 1.5rem;
    row-gap: 3rem;
  }
  .logo-div {
    position: absolute;
    width: 75px;
    height: 75px;
    margin-top: -6rem;
  }
  .roles-container {
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: center;
    row-gap: 4rem;
    padding: 4rem 0 4rem 0;
  }
  .tags {
    display: flexbox;
    height: auto;
    width: auto;
    flex-wrap: wrap;
  }
  .position-title {
    font-size: 1.5rem;
  }
  .role-headings {
    display: flex;
    width: auto;
    height: auto;
    flex-direction: row;
    justify-content: start;
    align-items: center;
    column-gap: 1rem;
    font-size: 1.5rem;
    color: hsl(180, 29%, 50%);
    font-weight: 700;
    font-family: "Outfit", serif;
  }
  .first-part {
    padding-bottom: 1.5rem;
    border-bottom: 1px hsl(180, 8%, 52%) solid;
  }
  .added-tags {
    flex-wrap: wrap;
  }
  .filter-section {
    position: absolute;
    width: 70%;
    height: auto;
    padding: 2rem 1rem 2rem 1rem;
    font-size: 0.75rem;
    column-gap: 0.5rem;
  }
}

